// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PinningMenu default correctly 1`] = `
<div
  className="component isOpen"
>
  <div
    className="container"
  >
    <nav
      className="links"
      role="navigation"
    >
      <span>
        content
      </span>
    </nav>
    <footer
      className="footer"
    >
      <div
        className="socials"
      >
        <a
          className="social"
          href="https://twitter.com/webcompat"
          rel="noopener noreferrer"
          target="_blank"
          title="Twitter webcompat accounts"
        >
          <span
            className="SVGInline SVGInline--cleaned"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
          />
        </a>
        <a
          className="social"
          href="https://github.com/webcompat"
          rel="noopener noreferrer"
          target="_blank"
          title="Github webcompat account"
        >
          <span
            className="SVGInline SVGInline--cleaned"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
          />
        </a>
      </div>
      <div
        className="footerText"
      >
        <span>
          Created and maintained by Webcompat
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders PinningMenu mneu not opened correctly 1`] = `
<div
  className="component "
>
  <div
    className="container"
  >
    <nav
      className="links"
      role="navigation"
    >
      <span>
        content
      </span>
    </nav>
    <footer
      className="footer"
    >
      <div
        className="socials"
      >
        <a
          className="social"
          href="https://twitter.com/webcompat"
          rel="noopener noreferrer"
          target="_blank"
          title="Twitter webcompat accounts"
        >
          <span
            className="SVGInline SVGInline--cleaned"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
          />
        </a>
        <a
          className="social"
          href="https://github.com/webcompat"
          rel="noopener noreferrer"
          target="_blank"
          title="Github webcompat account"
        >
          <span
            className="SVGInline SVGInline--cleaned"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
          />
        </a>
      </div>
      <div
        className="footerText"
      >
        <span>
          Created and maintained by Webcompat
        </span>
      </div>
    </footer>
  </div>
</div>
`;
